# voxa

./: .gitignore  Cargo.toml  LICENSE  README.md
.codex/environments/: environment.toml
apps/voico-menubar/: Package.swift  README.md
apps/voico-menubar/Sources/VoicoMenuBar/: AppController.swift  GlobalHotkeys.swift  IPCClient.swift  Models.swift  TranscriptOutput.swift  VoicoCLI.swift  VoicoMenuBarApp.swift
apps/voxa-menubar/: Package.swift  README.md
crates/voico-daemon/src/: lib.rs  main.rs  secrets.rs
crates/voicoctl/: Cargo.toml
crates/voicoctl/src/: main.rs
crates/voxa-core/: Cargo.toml
crates/voxa-daemon/: Cargo.toml
crates/voxa-daemon/src/: adapters.rs  lib.rs  main.rs  secrets.rs
crates/voxactl/: Cargo.toml  README.md
crates/voxactl/src/: main.rs
docs/: README.md  architecture.md  daemon.md  implementation-plan.md  improvements.md  ipc.md  parity-checklist.md  voicoctl.md  voxactl.md
next/: Cargo.toml  README.md
next/apps/voico-menubar-v2/: Package.swift  README.md
next/crates/voico-core/: Cargo.toml
next/crates/voico-daemon/: Cargo.toml
next/crates/voico-daemon/src/: adapters.rs  lib.rs  main.rs  secrets.rs  server.rs
next/crates/voico-daemon/src/server/: hotkeys.rs  mod.rs  state.rs  tests.rs
next/crates/voicoctl/: Cargo.toml
next/docs/: README.md  implementation-plan.md  ipc.md  parity-checklist.md  voicoctl.md
scripts/: check.sh  install.sh  package-macos.sh
src/: audio.rs  cli.rs  command.rs  config.rs  daemon.rs  daemon_config.rs  error.rs  hotkey.rs  main.rs  output.rs  service.rs  stt.rs
tests/: cli_behavior.rs
(+34 files in other folders)
