[package]
name = "voico-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cpal = "0.15.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
voico-core = { path = "../voico-core" }

[dev-dependencies]
mockito = "1.6"

[lints]
workspace = true
